--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,8 @@
   <title> Pass the Puck</title>
 </head>
 <body>
-
+  <div id="gamearea"></div>
+  <script type="text/javascript" src="/lib/crafty-min.js"></script>
+  <script type="text/javascript" src="/src/app.js"></script>
 </body>
 </html>
