--- a/app/index.html
+++ b/app/index.html
@@ -15,9 +15,9 @@
     <div class="row">
       <div class="six columns">
         <p> Create game</p>
-        <label for="game_name">Name</label>
-        <input class="u-full-width" type="text" id="game_name">
-        <button class="button-primary">Create Game</button>
+        <label for="game_name"> Name the Game </label>
+        <input class="u-full-width" type="text" id="game_name" placeholder="e.g. Death Alley by Brian">
+        <button class="button-primary" onclick="createGame()"> Create </button>
       </div>
       <div class="six columns left-bordered" id="join-parent">
         <p> Join game </p>
