players choose teams synced

--- a/app/index.html
+++ b/app/index.html
@@ -29,8 +29,8 @@
   <div id="controlsarea" class="container" hidden>
     <div class="row center">
       <input class="playername" type="text" placeholder=":your name" id="playerName">
-      <button class="button-primary" id="bluebtn" onclick="chooseTeam('blue')">Join Blue Team</button>
-      <button class="button-primary green" id="greenbtn" onclick="chooseTeam('green')">Join Green Team</button>
+      <button class="button-primary" id="bluebtn" onclick="chooseTeam('#33C3F0')">Join Blue Team</button>
+      <button class="button-primary green" id="greenbtn" onclick="chooseTeam('#60b044')">Join Green Team</button>
     </div>
     <div class="row center">
       <br>
