--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
   <script type="text/javascript" src="/lib/crafty-min.js"></script>
   <script type="text/javascript" src="/src/components.js"></script>
   <script type="text/javascript" src="/src/scenes.js"></script>
+  <script type="text/javascript" src="/src/components.js"></script>
   <script type="text/javascript" src="/src/app.js"></script>
 </body>
 </html>
