remove collide overlap also include gamepad support

--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
   <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
   <script type="text/javascript" src="/src/landing.js"></script>
   <script type="text/javascript" src="/lib/crafty-min.js"></script>
-  <script type="text/javascript" src="/src/components.js"></script>
+  <script type="text/javascript" src="/lib/crafty.gamepad.js"></script>
   <script type="text/javascript" src="/src/scenes.js"></script>
   <script type="text/javascript" src="/src/components.js"></script>
   <script type="text/javascript" src="/src/app.js"></script>
