--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'> -->
   <link rel="stylesheet" type="text/css" href="/assets/stylesheets/normalize.css">
   <link rel="stylesheet" type="text/css" href="/assets/stylesheets/skeleton.css">
   <link rel="stylesheet" type="text/css" href="/assets/stylesheets/style.css">
@@ -39,7 +39,7 @@
       </object>
     </div>
   </div>
-  <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+  <script type="text/javascript" src="/lib/socket.io.js"></script>
   <script type="text/javascript" src="/src/landing.js"></script>
   <script type="text/javascript" src="/lib/crafty-min.js"></script>
   <script type="text/javascript" src="/lib/crafty.gamepad.js"></script>
